--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2624,6 +2624,11 @@ button:disabled {
 .item-forum__more {
   @apply text-blueColor text-[18px] flex items-center gap-[25px] transition-all duration-300 leading-[116.666667%] hover:text-blueColor-hover;
 }
+
+.item-forum__author {
+  @apply text-[14px] font-bold;
+}
+
 .item-forum__more svg {
   @apply size-[20px];
 }
